k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: illness-prediction
  labels:
    name: illness-prediction
    environment: production
